--- a/Oving1/index.html
+++ b/Oving1/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div>
-            <a href="#">Home</a>
-            <a href="#">Previous work</a>
-            <a href="#">Contact us!</a>
-        </div>
+    <div class="grid">
+        <header>
+            <div class="menu">
+                <a class="active" href="#">Home</a>
+                <a href="#">Previous work</a>
+                <a href="#">Contact us!</a>
+            </div>
+        </header>
 
         <div class="logoAndTitle">
             <img src="logo.png"
@@ -21,19 +23,19 @@
                 Martys Construction
             </h2>
         </div>
-    </header>
-    
-    <div>
-        <p>We at Martys Construction can help! Click the contact button above to contact us.</p>
-        <img src="marty.jpg" 
-        alt="For en mann"
-        height="400">
-    </div>
+        
+        <div>
+            <p id="information">We at Martys Construction can help! Click the contact button above to contact us.</p>
+            <img src="marty.jpg" 
+            alt="For en mann"
+            height="400" id="portrait">
+        </div>
 
-    <div>
-        <footer>
-            <p>© Martys Construction A/S 2022</p>
-        </footer>
+        <div>
+            <footer>
+                <p id="copyright">© Martys Construction A/S 2022</p>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
